# zile

./: .gitignore  .prev-version  ChangeLog  Makefile.am  NEWS  README  bootstrap.conf  cfg.mk  configure.ac
build-aux/: .gitignore  Zile.pm  asan-suppressions.txt  mkbindings.pl  mkfuncs.pl  mkvars.pl
doc/: Makefile.am
gl/top/: README-release.diff
m4/: .gitignore
src/: .gitignore  Makefile.am  astr.c  astr.h  astr.vapi  basic.c  basic.vala  bind.c  bind.vala  buffer.c  buffer.vala  completion.c  completion.vala  config.vapi  constants.vala  curses.vapi  editfns.vala  estr-test.vala  estr.c  estr.h  estr.vala  estr.vapi  eval.c  eval.vala  extern.h  file.c  file.vala  funcs.c  funcs.vala  getkey.vala  getopt_long_fix.h  gnu.vapi  help.c  help.vala  history.vala  keycode.c  keycode.vala  killring.c  killring.vala  line.c  (+37 more)
tests/: .gitignore  Makefile.am  run-lisp-test.pl  run-lisp-tests.pl
tests/interactive/: universal-argument-default.el  universal-argument-default.output  universal-argument.el
tests/regression/: 60519_read_file_crash.el  60519_read_file_crash.orig-input
tests/zile-only/interactive/: negative_prefix-argument.el
